# 42_multilayer_perceptron

./: README.md  pyproject.toml  saved_model.npy
notebook/: data_exploration.ipynb  test_model.ipynb  test_real_model.ipynb
notebook/cache/: output.txt
src/: predict.py  split.py  train.py  utils.py
src/mlp/: model.py  utils.py
src/mlp/activations/: __init__.py  base.py
src/mlp/activations/functions/: identity.py  relu.py  sigmoid.py  softmax.py  tanh.py
src/mlp/dto/: model_parameters.py
src/mlp/initializers/: __init__.py  base.py  he.py  no_op.py
src/mlp/layers/: dense_layer.py
src/mlp/layers/utils/: requires_compiled.py
src/mlp/losses/: __init__.py  base.py  categorical_crossentropy.py  crossentropy.py
src/mlp/optimizers/: __init__.py  base.py  gradient_descent.py  momentum.py
tests/practice/: class_init.py  init_subclass.py  matrix_division.py  matrix_shape.py
